--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,6 @@ terraform.rc
 *.tfvars.json
 
 # Terraform generated files
-.terraform.lock.hcl # Generally, this should be committed, but some workflows might exclude it.
+# .terraform.lock.hcl # Generally, this should be committed, but some workflows might exclude it.
 # Check your team's policy on this file.
 
